envoy.yaml

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: proxy_service
                  prefix_rewrite: "/"
                  timeout: 1s
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              # grpc_service:
              #   google_grpc:
              #     target_uri: "proxy:8080/authorize"   # cluster name or service address
              #     stat_prefix: "proxy"
              http_service:
                server_uri:
                  uri: "http://proxy:8080/authorize"
                  cluster: "ext_authz_cluster"
                  timeout: 5s
                authorization_request:
                  allowed_headers:
                    patterns:
                    - exact: x-tenant-id
                authorization_response:
                  allowed_upstream_headers:
                    patterns:
                    - exact: x-auth-decision
              with_request_body:
                  max_request_bytes: 8192
                  allow_partial_message: true
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: proxy_service
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: proxy_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: proxy
                port_value: 8080
  - name: model_service
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: model_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: model
                port_value: 5000
  - name: ext_authz_cluster
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: ext_authz_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: proxy
                port_value: 8080
  - name: extauth
    type: STRICT_DNS
    connect_timeout: 1s
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: extauth
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: extauth
                port_value: 9000
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
